package edu.uees.tutorias.factory;

public class NotificadorWhatsApp implements Notificador {

    @Override
    public void enviarNotificacion(String destinatario, String asunto, String cuerpo) {
        throw new UnsupportedOperationException("No implementado aún (Esqueleto inicial del proyecto).");
    }
}
